# mlxterp

./: .gitignore  404.html  ACTIVATION_PATCHING_GUIDE.md  BUG_REPORT.md  CAUSAL_INTERP_ROADMAP.md  CLAUDE.md  DOCS_UPDATE_SUMMARY.md  DOCUMENTATION_UPDATE_METRICS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QWEN_FIX_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SAE_ADVANCED_FEATURES.md  SAE_INTEGRATION_PLAN.md  SAE_ROADMAP.md  TROUBLESHOOTING.md  Test Library.ipynb  VERIFICATION.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_new_features.py
API/: index.html
JUPYTER_GUIDE/: index.html
QUICKSTART/: index.html
TUTORIAL_PAPERS_PLAN/: index.html
architecture/: index.html
assets/: interactive_attention_demo.html
blog/: introducing-mlxterp.md
citation/: index.html
contributing/: index.html
dev/: index.html
dev/IMPLEMENTATION_SUMMARY/: index.html
dev/PERFORMANCE_NOTES/: index.html
dev/PHASE2_COMPLETE/: index.html
dev/SAELENS_COMPARISON/: index.html
dev/SAE_PHASE2_SUMMARY/: index.html
dev/TUTORIAL_PAPERS_PLAN/: index.html
docs/: API.md  JUPYTER_GUIDE.md  QUICKSTART.md  TUTORIAL_PAPERS_PLAN.md  architecture.md  citation.md  contributing.md  examples.md  index.md  installation.md  license.md
docs/assets/: interactive_attention_demo.html
docs/dev/: PERFORMANCE_NOTES.md  PHASE2_COMPLETE.md  README.md  SAELENS_COMPARISON.md  TUTORIAL_PAPERS_PLAN.md
docs/guides/: activation_patching.md  agentic_interp.md  attention_visualization.md  (+7 more)
examples/: activation_patching_example.py  activation_patching_positions.py  agentic_demo.py  attribution_patching.py  autointerpret_dryrun.py  basic_usage.py  causal_trace.py  direct_logit_attribution.py  evaluate_sae.py  generation_with_interventions.py  index.html  neuronpedia_style_viz.py  patching_visualization.py  path_patching.py  phase2_feature_analysis.py  residual_stream.py  sae_feature_analysis.py  sae_quickstart.py  sae_realistic_training.py  sae_with_wandb.py  sycophancy_investigation.py
installation/: index.html
license/: index.html
mlxterp/: __init__.py  analysis.py  auto_interp.py  generation.py  metrics.py  model.py  reports.py  residual_stream.py  results.py  sae_mixin.py  tokenization.py  tuned_lens.py  workflows.py
scripts/: check_docs_sync.py
search/: search_index.json
tests/: README.md  test_activation_patching_helper.py  test_activation_patching_kl.py  test_activation_patching_mlp.py  test_activation_patching_positions.py  test_activation_patching_simple.py  test_activation_validity.py  test_attention_patterns.py  test_attention_weights.py  test_attribution.py  test_attribution_patching.py  test_auto_interp.py  test_autointerpret.py  test_causal_patching.py  test_causal_trace.py  test_check_wrappers.py  test_children_vs_property.py  test_component_resolution.py  test_comprehensive.py  test_debug_names.py  test_debug_token_positions.py  test_direct_logit_attribution.py  test_dla.py  test_dtype_consistency.py  test_e2e_agentic.py  test_edge_cases.py  test_feature_circuits.py  test_generation.py  test_generation_with_interventions.py  test_interventions.py  test_logit_lens.py  test_logit_lens_plot.py  test_metrics.py  test_model_restoration.py  test_nested_modules.py  test_output_equivalence.py  test_patching.py  test_patching_details.py  test_patching_visualization.py  test_patching_viz.py  (+17 more)
tutorials/: index.html
(+90 files in other folders)
