[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlxterp"
version = "0.1.0"
description = "Mechanistic interpretability for MLX on Apple Silicon"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "mlx",
    "interpretability",
    "mechanistic-interpretability",
    "apple-silicon",
    "machine-learning",
    "transformers"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ipykernel>=6.31.0",
    "mlx>=0.0.1",
    "mlx-lm>=0.28.3",
    "pandas",
    "matplotlib",
    "wandb",
    "datasets",
]

[project.optional-dependencies]
lm = [
    "mlx-lm>=0.0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "ruff>=0.1.0",
    "pandas",
    "matplotlib",
    "wandb",
    "datasets",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
viz = [
    "matplotlib>=3.5",
    "plotly>=5.0",
    "numpy>=1.21",
]
all = [
    "mlxterp[lm,dev,docs,viz]",
]

[project.urls]
Homepage = "https://github.com/yourusername/mlxterp"
Documentation = "https://yourusername.github.io/mlxterp/"
Repository = "https://github.com/yourusername/mlxterp"
"Bug Tracker" = "https://github.com/yourusername/mlxterp/issues"
Changelog = "https://github.com/yourusername/mlxterp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["mlxterp"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=mlxterp --cov-report=term-missing"

[tool.coverage.run]
source = ["mlxterp"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
